-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.11
-
None
-
-
53005efcf (dev), 5123ac724 (dev), 33f44cb0b (6.10), 02377c347 (dev), fd0987a8a (dev), 3f3457e70 (6.10), 21314a1c4 (6.10)
Build failure when ctf is enabled:
agent:2025/09/22 11:53:04 build.go:413: | FAILED: [code=1] src/corelib/qtcore.tracepoints /home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/build/src/corelib/qtcore.tracepoints agent:2025/09/22 11:53:04 build.go:413: | cd /home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/build/src/corelib && /home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/recipe-sysroot-native/usr/libexec/tracepointgen qtcore /home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/build/src/corelib/qtcore.tracepoints "I/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/build/src/corelib/Core_autogen/include;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/build/include;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/build/include/QtCore;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/sources/qtbase-6.11.0/src/corelib;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/build/src/corelib;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/build/src/corelib/global;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/build/src/corelib/kernel;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/sources/qtbase-6.11.0/src/corelib/../3rdparty/tinycbor/src;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/build/include/QtCore/6.11.0;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/build/include/QtCore/6.11.0/QtCore;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/sources/qtbase-6.11.0/src/corelib/../3rdparty/double-conversion/double-conversion;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/sources/qtbase-6.11.0/src/corelib/../3rdparty/double-conversion;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/sources/qtbase-6.11.0/src/corelib/../3rdparty/forkfd;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/build/src/corelib/.rcc;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/sources/qtbase-6.11.0/mkspecs/linux-g++;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/build/include;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/build/include/QtCore/6.11.0;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/build/include/QtCore/6.11.0/QtCore;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/build/include;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/build/include/QtCore;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/recipe-sysroot/usr/include;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/recipe-sysroot/usr/include;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/recipe-sysroot/usr/include;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/recipe-sysroot/usr/include;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/recipe-sysroot/usr/include;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/recipe-sysroot/usr/include;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/recipe-sysroot/usr/include;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/recipe-sysroot/usr/include/glib-2.0;/home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/recipe-sysroot/usr/lib/glib-2.0/include" /home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/sources/qtbase-6.11.0/src/corelib/kernel/qcoreapplication.cpp /home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/sources/qtbase-6.11.0/src/corelib/kernel/qcoreevent.cpp /home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/sources/qtbase-6.11.0/src/corelib/kernel/qobject.cpp /home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/sources/qtbase-6.11.0/src/corelib/plugin/qfactoryloader.cpp /home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/sources/qtbase-6.11.0/src/corelib/plugin/qlibrary.cpp /home/qt/work/build/build/tmp/work/cortexa55-poky-linux/qtbase/6.11.0/sources/qtbase-6.11.0/src/corelib/global/qlogging.cpp agent:2025/09/22 11:53:04 build.go:413: | tracepointgen: fatal: Unable to find values for QEvent::Type
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTBUG-140443 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 678653,5 | tracepointgen: Add file path to include directories | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 679549,2 | qtbase: disable ctf temporarily | dev | yocto/meta-qt6 | Status: MERGED | +2 | 0 |
| 680773,3 | Add syncqt headers to tracepointgen dependencies | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 681200,3 | Tracepointgen: Fix dash in include regex | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 681840,2 | tracepointgen: Add file path to include directories | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
| 681927,2 | Tracepointgen: Fix dash in include regex | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
| 681928,2 | Add syncqt headers to tracepointgen dependencies | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
| 684029,1 | qtbase: disable ctf temporarily | 6.10 | yocto/meta-qt6 | Status: ABANDONED | +2 | 0 |