tracepointgen: Add file path to include directories

Add the parsed file absolute path to include directories so that
files in the same directory can be found when resolving includes.

Fixes: QTBUG-140443
Change-Id: I91f913173dc42fd6b954a1821d992ad6288f694b
Reviewed-by: Samuli Piippo <samuli.piippo@qt.io>
(cherry picked from commit 5123ac724a70b1a100a0cc31d40c16cb93ba90b7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>